# rebel-rs

./: .gitignore  Cargo.toml  README.md  Secrets.toml  build.rs  shuttle.toml
src/: main.rs
src/commands/: meta.rs  mod.rs
